--- a/game.html
+++ b/game.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="./format.css">
   <link rel="stylesheet" href="./game.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 
@@ -32,7 +31,7 @@
     <div class="conteudo">
 
       <div class="cabecalho">
-        <img src="./imagens/Frame 1329 (2).svg" alt="">
+        <img src="./imagens/Game_icon.svg" alt="">
         <h1 class="titulo">Equipamentos e procedimentos</h1>
         <h2 class="min10">10min</h2>
       </div>
