--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="./format.css">
   <link rel="stylesheet" href="./video.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
 
@@ -31,7 +30,7 @@
   </div>
   <div class="conteudo">
     <div class="conteudo_2">
-      <img class="iconv" src="./imagens/Frame 1329.svg" alt="">
+      <img class="iconv" src="./imagens/Video_icon.svg" alt="">
       <h1 class="intro">Introdução ao curso de Estomias</h1>
       <div class="botoes">
         <button class="Descrição">
