--- a/exerc2.html
+++ b/exerc2.html
@@ -4,9 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Atividade sem nota</title>
-  <link rel="icon" href="./imagens/border_color.svg">
-  <link rel="stylesheet" href="./format.css">
+  <title>Atividade com nota</title>
+  <link rel="icon" href="./imagens/border_color.png">
+  <link rel="stylesheet" href="./Styles/format.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
