--- a/game.html
+++ b/game.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <title>game</title>
-  <link rel="icon" href="./imagens/joystick.svg">
-  <link rel="stylesheet" href="./format.css">
-  <link rel="stylesheet" href="./game.css">
+  <link rel="icon" href="./imagens/joystick.png">
+  <link rel="stylesheet" href="./Styles/format.css">
+  <link rel="stylesheet" href="./Styles/game.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
