--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>video</title>
-  <link rel="icon" href="./imagens/subscriptions.svg">
-  <link rel="stylesheet" href="./format.css">
-  <link rel="stylesheet" href="./video.css">
+  <link rel="icon" href="./imagens/subscriptions.png">
+  <link rel="stylesheet" href="./Styles/format.css">
+  <link rel="stylesheet" href="./Styles/video.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
