--- a/texto.html
+++ b/texto.html
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>texto</title>
-  <link rel="icon" href="./imagens/article (1).svg">
-  <link rel="stylesheet" href="./format.css">
-  <link rel="stylesheet" href="./texto.css">
+  <link rel="icon" href="./imagens/article.png">
+  <link rel="stylesheet" href="../Styles/format.css">
+  <link rel="stylesheet" href="../Styles/texto.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
 </head>
@@ -29,7 +29,7 @@
 
     <div class="conteudo">
 
-      <img src="./imagens/Texto_icon.svg" alt="">
+      <img src="../imagens/Texto_icon.svg" alt="">
       <h1 class="titulo">Equipamentos e procedimentos</h1>
 
       <div class="min">
@@ -56,7 +56,7 @@
           in dignissim nunc aliquet sit amet. Nam porta eleifend tempus. Proin imperdiet augue velit, scelerisque ultricies mauris auctor vitae.
         </p>
 
-        <img src="./imagens/Bolsa_de_estomias.svg" alt="" class="imgtxt">
+        <img src="../imagens/Bolsa_de_estomias.svg" alt="" class="imgtxt">
 
         <p>
           Proin viverra dolor et ante tristique, id efficitur augue aliquet. Cras nisi eros, pellentesque a arcu eget, mattis sodales neque. Pellentesque vehicula leo vel turpis dignissim tincidunt. Suspendisse pulvinar, orci non dapibus efficitur, turpis magna commodo massa, eu euismod lorem justo ut purus. Proin fermentum purus vitae nisi ultricies, eget rhoncus velit gravida. Integer semper tellus tellus, sed porta massa eleifend sit amet. Sed tristique, nisi vitae bibendum feugiat, dolor nunc viverra dui, a accumsan urna enim non libero. Vivamus lobortis augue et nulla sollicitudin, vel commodo neque varius.
