--- a/texto.html
+++ b/texto.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>texto</title>
-  <link rel="icon" href="./imagens/article.png">]
+  <link rel="icon" href="./imagens/article.png">
   <link rel="stylesheet" href="./Styles/format.css">
   <link rel="stylesheet" href="./Styles/texto.css">
 
