--- a/exerc2.html
+++ b/exerc2.html
@@ -30,9 +30,9 @@
     <div class="conteudo">
 
       <section class="container_titulo">
-        <img src="./imagens/exerc2_icon.svg" alt="">
+        <img src="./img/com-nota-icon.svg" alt="">
         <h1>Equipamentos e procedimentos</h1>
-        <img src="./imagens/total 4 pontos.svg" alt="">
+        <img src="./img/4pontos.svg" alt="">
       </section>
 
       <section class="nota">
