--- a/game.html
+++ b/game.html
@@ -31,7 +31,7 @@
       <div class="conteudo">
 
         <div class="cabecalho">
-          <img src="./imagens/Game_icon.svg" alt="">
+          <img src="./img/game-icon.svg" alt="">
           <h1 class="titulo">Equipamentos e procedimentos</h1>
           <h2 class="min10">10min</h2>
         </div>
