--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </div>
   <div class="conteudo">
     <div class="conteudo_2">
-      <img class="iconv" src="./imagens/Video_icon.svg" alt="">
+      <img class="iconv" src="./img/video-icon.svg" alt="">
       <h1 class="intro">Introdução ao curso de Estomias</h1>
       <div class="botoes">
         <button class="Descrição">
